# spinhance

./: .coverage  .gitattributes  .gitignore  CLAUDE.md  PRESENTATION_OUTLINE.md  README.md  conftest.py  environment.yml  pyproject.toml  setup_env.sh
autoai/: IDEAS.md  README.md  config.py  contract.py  eval_harness.py  experiment_log.py  orchestrator.py  run_reader.py  smoke_diagnostics_cycle.py  test_diagnostics_artifact_integration.py  test_run_reader.py  test_smoke_diagnostics_cycle.py
autoaiv2/: DESIGN.md  bedrock.py  budget.py  cycle_record.py  idea_spec.py  loop.py  run_monitor.py  tools.py
aws_trainer/: DESIGN.md  config.py  dataset.py  ema.py  logging_utils.py  model.py  run.py  train.py
aws_trainer/configs/: medium_s1.json  (+1 more)
context/: README.md  aws_setup.md  bedrock_claude.md  ec2.md  example_claude_call.py  setup_aws_login.sh
data/: chembl_8spin.xyz
docs/: README.md  build_field_sweep.py  index.html  sample_pubchem_subset.py  slides.html  training_diagnostics.md
generate/: CLAUDE.md  README.md  XYZ_FORMAT.md  __init__.py  __main__.py  buckets.py  cli.py  config.py  dedup.py  example_claude_call.py  filter_chembl.py  merge_shards.py  pipeline.py  sources.py  spin_equivalence.py  spin_group_filter.py  view_candidates.py  viewer.py  xyz_writer.py
ml_model/: DESIGN.md  dataset.py  diff_renderer_ref.py  diff_renderer_torch.py  losses.py  metrics.py  model.py  schedules.py  splits.py  targets.py  test_diff_renderer.py  test_splits.py  test_targets.py  test_train_infra.py  train.py
model/: DESIGN.md  README.md  RESULTS.md  SUGGESTIONS.md  __init__.py  data_adapter.py  dataset.py  diagnostics.py  diff_renderer_ref.py  diff_renderer_torch.py  enter_ec2.sh  failure_analysis.py  gui.py  gui_surrogate.py  live_dashboard.py  losses.py  metrics.py  model.py  probes.py  registry.py  run_experiment.py  schedules.py  setup.sh  smoke_visual.py  splits.py  stage1.py  stage2.py  targets.py  test_checkpoint_saving.py  test_composite_diff.py  test_diagnostics.py  test_diagnostics_reset.py  test_diff_renderer.py  test_failure_analysis.py  test_splits.py  test_stage2.py  test_targets.py  test_train_infra.py  train.py  train.sh  (+3 more)
model_legacy/: __init__.py  data_adapter.py  dataset.py  diagnostics.py  diff_renderer_torch.py  failure_analysis.py  gui.py  live_dashboard.py  losses.py  metrics.py  probes.py  run_experiment.py  s3io.py  setup.sh  stage1.py  stage2.py  targets.py  test_checkpoint_saving.py  test_composite_diff.py  test_diagnostics.py  test_diagnostics_reset.py  test_diff_renderer.py  test_failure_analysis.py  test_splits.py  test_stage2.py  test_targets.py  test_train_infra.py  train.py  train.sh  verify_real_data.py
modelv2/: DESIGN.md  data.py  gui.py  model.py  train.py  train.sh  upload_data.sh
mol_to_matrix/: README.md  SETUP.md  aromatic.py  coupling.py  geminal.py  groups.py  long_range.py  matrix.py  merge_shards.py  olefinic.py  pipeline.py  shifts.py  vicinal.py  xyz.py
mol_to_spin_system/: README.md  SETUP.md  aromatic.py  augment.py  bintest.py  buckets.py  coupling.py  geminal.py  groups.py  long_range.py  matrix.py  merge_shards.py  olefinic.py  pipeline.py  vicinal.py  xyz.py
simulation/: CLAUDE.md  README.md  __init__.py  batch_simulate.py  batch_simulate.qs  cli.py  discover_mnova_api.py  discover_mnova_api2.py  discover_mnova_api3.py  export.py  graph_io.py  mnova_runner.py  pipeline.py  plot_spectra.py  plotting.py  run_batch.py  spectrum_io.py  spinhanceBatch.qs  test_xml_utils.py  xml_io.py  xml_utils.py
tests/: test_mol_to_matrix.py  test_mol_to_spin_system.py
(+154 files in other folders)
